# shuffle

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  README.rst  build.py  pyproject.toml  setup.cfg  setup.py  shuffle.hpp  shuffle.pyx  tests.cpp
shuffle/: __init__.py
shuffle/tests/: tests.py
tests/: test_shuffle.py
