CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(shuffle)

ADD_EXECUTABLE(unittests tests.cpp)

FIND_PACKAGE(Boost REQUIRED COMPONENTS unit_test_framework)

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
TARGET_LINK_LIBRARIES(unittests ${Boost_LIBRARIES})
SET_PROPERTY(TARGET unittests PROPERTY COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK COMPILE_TESTS)

IF(DEFINED ENV{TRAVIS})
  SET(CMAKE_CXX_FLAGS "-std=c++0x -Wall -O3")
ELSE()
  SET(CMAKE_CXX_FLAGS "-std=c++0x -Wall --coverage -O0 -g")
ENDIF(DEFINED ENV{TRAVIS})

MESSAGE(STATUS "  Build Type: " "${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "  C++ flags: " "${CMAKE_CXX_FLAGS}")